--- a/index.html
+++ b/index.html
@@ -3,46 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Advanced Calculator</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&display=swap" rel="stylesheet">
+    <title>Calculator - HTML/CSS/JS</title>
+    <link ref="stylesheet" href="css/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" rel="stylesheet">
 </head>
-<body>
-    <div class="container">
-        <div class="calculator">
-            <div class="display">
-                <div class="previous-operand"></div>
-                <div class="current-operand" id="display">0</div>
+<body class="bg-light">
+    <div class="container d-flex justify-content-center align-items-center min-vh-100">
+        <div class="card shadow-lg" style="width: 350px;">
+            <div class="card-header bg-primary text-white text-center">
+                <h4 class="mb-0"><i class="bi bi-calculator-fill me-2"></i>Simple Calculator</h4>
             </div>
-            <div class="buttons-grid">
-                <button class="btn-clear" data-action="clear">AC</button>
-                <button class="btn-clear" data-action="delete">⌫</button>
-                <button class="btn-operator" data-action="divide">÷</button>
-                <button class="btn-operator" data-action="multiply">×</button>
-                <button class="btn-number" data-value="7">7</button>
-                <button class="btn-number" data-value="8">8</button>
-                <button class="btn-number" data-value="9">9</button>
-                <button class="btn-operator" data-action="subtract">−</button>
-                <button class="btn-number" data-value="4">4</button>
-                <button class="btn-number" data-value="5">5</button>
-                <button class="btn-number" data-value="6">6</button>
-                <button class="btn-operator" data-action="addition">+</button>
-                <button class="btn-number span-two" data-value="1">1</button>
-                <button class="btn-number" data-value="2">2</button>
-                <button class="btn-number" data-value="3">3</button>
-                <button class="btn-number span-two" data-value="0">0</button>
-                <button class="btn-number" data-value=".">.</button>
-                <button class="btn-equals" data-action="equals">=</button>
-            </div>
-            <!-- Advanced Function Buttons -->
-            <div class="function-row">
-                <button class="btn-function" data-action="square">x²</button>
-                <button class="btn-function" data-action="cube">x³</button>
-                <button class="btn-function" data-action="sqrt">√</button>
-                <button class="btn-function" data-action="power">xʸ</button>
+            <div class="card-body p-4">
+                <!-- Display Screen -->
+                <div class="mb-4">
+                    <input type="text" id="display" class="form-control form-control-lg text-end fs-4 fw-bold bg-white border-primary" 
+                           style="height: 70px;" readonly>
+                </div>
+
+                <!-- Buttons Grid -->
+                <div class="row g-2">
+                    <div class="col-3"><button class="btn btn-outline-secondary btn-lg w-100 h-100" onclick="clearDisplay()">C</button></div>
+                    <div class="col-3"><button class="btn btn-outline-secondary btn-lg w-100 h-100" onclick="deleteLast()">⌫</button></div>
+                    <div class="col-3"><button class="btn btn-outline-warning btn-lg w-100 h-100" onclick="appendToDisplay('/')">/</button></div>
+                    <div class="col-3"><button class="btn btn-outline-warning btn-lg w-100 h-100" onclick="appendToDisplay('*')">×</button></div>
+
+                    <div class="col-3"><button class="btn btn-light btn-lg w-100 h-100" onclick="appendToDisplay('7')">7</button></div>
+                    <div class="col-3"><button class="btn btn-light btn-lg w-100 h-100" onclick="appendToDisplay('8')">8</button></div>
+                    <div class="col-3"><button class="btn btn-light btn-lg w-100 h-100" onclick="appendToDisplay('9')">9</button></div>
+                    <div class="col-3"><button class="btn btn-outline-warning btn-lg w-100 h-100" onclick="appendToDisplay('-')">-</button></div>
+
+                    <div class="col-3"><button class="btn btn-light btn-lg w-100 h-100" onclick="appendToDisplay('4')">4</button></div>
+                    <div class="col-3"><button class="btn btn-light btn-lg w-100 h-100" onclick="appendToDisplay('5')">5</button></div>
+                    <div class="col-3"><button class="btn btn-light btn-lg w-100 h-100" onclick="appendToDisplay('6')">6</button></div>
+                    <div class="col-3"><button class="btn btn-success btn-lg w-100 h-100" onclick="calculate()">=</button></div>
+
+                    <div class="col-3"><button class="btn btn-light btn-lg w-100 h-100" onclick="appendToDisplay('1')">1</button></div>
+                    <div class="col-3"><button class="btn btn-light btn-lg w-100 h-100" onclick="appendToDisplay('2')">2</button></div>
+                    <div class="col-3"><button class="btn btn-light btn-lg w-100 h-100" onclick="appendToDisplay('3')">3</button></div>
+                    <div class="col-3"><button class="btn btn-outline-warning btn-lg w-100 h-100" onclick="appendToDisplay('+')">+</button></div>
+
+                    <div class="col-6"><button class="btn btn-light btn-lg w-100 h-100" onclick="appendToDisplay('0')">0</button></div>
+                    <div class="col-3"><button class="btn btn-light btn-lg w-100 h-100" onclick="appendToDisplay('.')">.</button></div>
+                    <div class="col-3">
+                        <div class="row g-1 h-100">
+                            <div class="col-12"><button class="btn btn-info btn-lg w-100 mb-1" onclick="square()">x²</button></div>
+                            <div class="col-12"><button class="btn btn-purple btn-lg w-100" onclick="cube()">x³</button></div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-    <script src="js/calculator.js"></script>
+
+    
+
+    <script src="Js/calculator.js"></script>
 </body>
 </html>
